# split-bot

./: .dockerignore  .env.dist  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
app/: const.py  runners.py  types.py
app/controllers/: auth.py  price.py
app/controllers/gift_codes/: get.py
app/controllers/ton/: connect.py  proof.py  waiter.py
app/enums/: __init__.py  deep_link_action.py  fragment_error_type.py  gift_code_creation_status.py  pagination_menu_type.py  payment_method.py
app/exceptions/: ton_connect.py
app/factory/telegram/: bot.py  dispatcher.py  i18n.py
app/models/: base.py
app/models/config/: __init__.py
app/models/config/assets/: __init__.py  assets.py  gift_codes.py  shop.py  (+1 more)
app/models/dto/: __init__.py  deep_link.py  gift_code.py  ton.py  user.py
app/models/sql/: __init__.py  deep_link.py  tc_record.py  user.py
app/services/: deep_links.py  task_manager.py  user.py
app/services/backend/: __init__.py  client.py  errors.py  session.py
app/services/database/: __init__.py
app/services/ton_connect/: __init__.py  adapter.py  storage.py
app/telegram/filters/: states.py
app/telegram/helpers/: messages.py  paginator.py
app/telegram/keyboards/: gift_codes.py  language.py  menu.py  purchase.py  referral.py  ton_connect.py
app/telegram/middlewares/: __init__.py  backend_provider.py  database.py  event_typed.py  message_helper.py  ton_connect.py  ton_connect_checker.py  user.py
app/telegram/results/: inline_query.py
app/utils/: key_builder.py  qr.py  ton.py  yaml.py
app/utils/localization/: manager.py  patches.py
app/utils/ton/: __init__.py  address.py  numbers.py
assets/: gift_codes.yml  shop.yml  ton_connect.yml
assets/messages/en/: gift_codes.ftl  messages.ftl
assets/messages/ru/: gift_codes.ftl  messages.ftl
migrations/: env.py
migrations/versions/: 001_initial.py  002_create_indexes.py  003_deep_links.py
scripts/: docker-entrypoint.sh
(+62 files in other folders)
